--- a/src/cropper.css
+++ b/src/cropper.css
@@ -14,9 +14,9 @@
 .cropper-container .cropper-modal {
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     background: #000;
     filter: alpha(opacity=50);
     opacity: .5;
@@ -38,41 +38,36 @@
        -moz-box-sizing: border-box;
             box-sizing: border-box;
     overflow: hidden;
+    border-width: 1px;
     border-color: #69f;
     border-color: rgba(51, 102, 255, .75);
     border-style: solid;
-    border-width: 1px;
 }
 
 .cropper-container .cropper-dashed {
     position: absolute;
     display: block;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-size: 0;
-    line-height: 0;
-    background-color: #69f;
     filter: alpha(opacity=50);
     opacity: .5;
+    border: 0 dashed #fff;
 }
 
 .cropper-container .dashed-h {
     top: 33.3%;
     left: 0;
     height: 33.3%;
-    background-color: transparent;
-    border-top: 1px dashed #fff;
-    border-bottom: 1px dashed #fff;
+    width: 100%;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
 }
 
 .cropper-container .dashed-v {
     top: 0;
     left: 33.3%;
+    height: 100%;
     width: 33.3%;
-    background-color: transparent;
-    border-right: 1px dashed #fff;
-    border-left: 1px dashed #fff;
+    border-right-width: 1px;
+    border-left-width: 1px;
 }
 
 .cropper-container .cropper-face,
@@ -82,9 +77,6 @@
     display: block;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    font-size: 0;
-    line-height: 0;
     filter: alpha(opacity=10);
     opacity: .1;
 }
@@ -184,7 +176,6 @@
     width: 20px;
     height: 20px;
     cursor: se-resize;
-    overflow: visible;
     filter: alpha(opacity=100);
     opacity: 1;
 }
