--- a/src/cropper.css
+++ b/src/cropper.css
@@ -48,19 +48,19 @@
     height: 80%;
 }
 
-.cropper-preview {
+.cropper-viewer {
     display: block;
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
     overflow: hidden;
-    border-color: #69f;
-    border-color: rgba(51, 102, 255, .75);
-    border-style: solid;
-    border-width: 1px;
+    outline-color: #69f;
+    outline-color: rgba(51, 102, 255, .75);
+    outline-style: solid;
+    outline-width: 1px;
+    outline-offset: -1px;
 }
 
-.cropper-preview > img {
+.cropper-viewer > img {
     max-width: none !important;
     max-height: none !important;
 }
