--- a/src/cropper.css
+++ b/src/cropper.css
@@ -58,7 +58,6 @@
   outline-style: solid;
   outline-color: #69f;
   outline-color: rgba(51, 102, 255, .75);
-  outline-offset: -1px;
 }
 
 .cropper-viewer > img {
@@ -116,13 +115,13 @@
 
 .cropper-line.line-e {
   top: 0;
-  right: -2px;
+  right: -3px;
   width: 5px;
   cursor: e-resize;
 }
 
 .cropper-line.line-n {
-  top: -2px;
+  top: -3px;
   left: 0;
   height: 5px;
   cursor: n-resize;
@@ -130,13 +129,13 @@
 
 .cropper-line.line-w {
   top: 0;
-  left: -2px;
+  left: -3px;
   width: 5px;
   cursor: w-resize;
 }
 
 .cropper-line.line-s {
-  bottom: -2px;
+  bottom: -3px;
   left: 0;
   height: 5px;
   cursor: s-resize;
@@ -151,50 +150,54 @@
 }
 
 .cropper-point.point-e {
-  top: 49%;
-  right: -2px;
+  top: 50%;
+  right: -3px;
+  margin-top: -3px;
   cursor: e-resize;
 }
 
 .cropper-point.point-n {
-  top: -2px;
-  left: 49%;
+  top: -3px;
+  left: 50%;
+  margin-left: -3px;
   cursor: n-resize;
 }
 
 .cropper-point.point-w {
-  top: 49%;
-  left: -2px;
+  top: 50%;
+  left: -3px;
+  margin-top: -3px;
   cursor: w-resize;
 }
 
 .cropper-point.point-s {
-  bottom: -2px;
-  left: 49%;
+  bottom: -3px;
+  left: 50%;
+  margin-left: -3px;
   cursor: s-resize;
 }
 
 .cropper-point.point-ne {
-  top: -2px;
-  right: -2px;
+  top: -3px;
+  right: -3px;
   cursor: ne-resize;
 }
 
 .cropper-point.point-nw {
-  top: -2px;
-  left: -2px;
+  top: -3px;
+  left: -3px;
   cursor: nw-resize;
 }
 
 .cropper-point.point-sw {
-  bottom: -2px;
-  left: -2px;
+  bottom: -3px;
+  left: -3px;
   cursor: sw-resize;
 }
 
 .cropper-point.point-se {
-  right: -2px;
-  bottom: -2px;
+  right: -3px;
+  bottom: -3px;
   width: 20px;
   height: 20px;
   cursor: se-resize;
