--- a/demos/css/docs.css
+++ b/demos/css/docs.css
@@ -12,7 +12,7 @@
   background-color: #f7f7f7;
   border: 1px solid #eee;
   box-shadow: inset 0 0 3px #f7f7f7;
-  height: 480px;
+  max-height: 480px;
   width: 100%;
   overflow: hidden;
 }
