--- a/demos/css/main.css
+++ b/demos/css/main.css
@@ -147,6 +147,21 @@ body {
   color: #eee;
 }
 
+.docs-header .navbar-toggle {
+  border-color: #003973;
+  background-color: #00468c;
+}
+
+.docs-header .navbar-toggle:hover,
+.docs-header .navbar-toggle:focus {
+  border-color: #003366;
+  background-color: #003973;
+}
+
+.docs-header .navbar-collapse {
+  border-color: #003973;
+}
+
 .docs-header .navbar-text {
   color: #ddd;
 }
@@ -167,7 +182,8 @@ body {
 }
 
 .img-container {
-  height: 466px;
+  min-height: 200px;
+  max-height: 466px;
   margin-bottom: 20px;
 }
 
@@ -253,6 +269,24 @@ body {
 
 .btn-upload .tooltip-inner {
   white-space: nowrap;
+}
+
+@media (max-width: 400px) {
+  .btn-group-crop {
+    margin-right: -15px!important;
+  }
+
+  .btn-group-crop > .btn {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .btn-group-crop .docs-tooltip {
+    margin-left: -5px;
+    margin-right: -5px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 .docs-options .dropdown-menu {
