Add min-* styles

--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -21,8 +21,9 @@
   top: 0;
   left: 0;
   z-index: -1;
-  .square(e("auto !important"));
-  .max-square(e("none !important"));
+  .square(e("auto!important"));
+  .min-square(e("0!important"));
+  .max-square(e("none!important"));
   .opacity(0);
 }
 
