--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -187,6 +187,12 @@ body {
   margin-bottom: 20px;
 }
 
+@media (min-width: 768px) {
+  .img-container {
+    min-height: 466px;
+  }
+}
+
 .img-container > img {
   max-width: 100%;
 }
@@ -309,6 +315,7 @@ body {
   text-align: center;
 }
 
-.docs-cropped .modal-body > img {
+.docs-cropped .modal-body > img,
+.docs-cropped .modal-body > canvas {
   max-width: 100%;
 }
