Add jumbotron to documentation

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -138,6 +138,7 @@ body {
 /* Header */
 
 .docs-header {
+  margin-bottom: 0;
   border-color: #0066bf;
   background-color: #0074d9;
   color: #fff;
@@ -168,6 +169,62 @@ body {
 
 .docs-header .navbar-nav > li > a {
   color: #eee;
+}
+
+
+/* Jumbotron */
+
+.docs-jumbotron {
+  background-color: #fcfcfc;
+}
+
+.docs-carbonads-container {
+  position: relative;
+}
+
+.docs-carbonads {
+  max-width: 320px;
+  max-height: 100px;
+}
+
+.carbon-wrap {
+  overflow: hidden;
+}
+
+.carbon-img {
+  clear: left;
+  float: left;
+  display: block;
+}
+
+.carbon-text,
+.carbon-poweredby {
+  display: block;
+  margin-left: 140px;
+  text-decoration: none;
+}
+
+.carbon-text:hover,
+.carbon-text:focus,
+.carbon-poweredby:hover,
+.carbon-poweredby:focus {
+  text-decoration: none;
+}
+
+.carbon-text {
+  color: #0074d9;
+}
+
+.carbon-poweredby {
+  color: #999;
+}
+
+@media (min-width: 992px) {
+  .docs-carbonads {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+  }
 }
 
 
