--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -65,6 +65,10 @@
   background-position: -360px 0;
 }
 
+.icon-ok {
+  background-position: -390px 0;
+}
+
 
 /* Alerts
  * -------------------------------------------------------------------------- */
