--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,13 +1,13 @@
 // Cropper
 // =============================================================================
-
+/*!rtl:ignore*/
 .cropper-container {
   position: relative;
   overflow: hidden;
   .user-select(none);
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
-
+  direction: ltr !important;
   img {
     display: block; // Avoid margin top issue (Occur only when margin-top <= -height)
     image-orientation: 0deg !important; // https://developer.mozilla.org/en-US/docs/Web/CSS/image-orientation
