Disable touch action

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,6 +8,8 @@
   direction: ltr !important; // Ignore global rtl
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
+  -ms-touch-action: none;
+  touch-action: none;
 
   img {
     display: block; // Avoid margin top issue (Occur only when margin-top <= -height)
