Darken the color guides and center

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -52,7 +52,7 @@
 .cropper-dashed {
   position: absolute;
   display: block;
-  border: 0 dashed #fff;
+  border: 0 dashed #eee;
   .opacity(.5);
 
   &.dashed-h {
@@ -85,7 +85,7 @@
   &:after {
     position: absolute;
     display: block;
-    background-color: #fff;
+    background-color: #eee;
     content: " ";
   }
 
