Add bidirectional resize cursor

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -133,6 +133,7 @@
     right: -3px;
     width: 5px;
     cursor: e-resize;
+    cursor: ew-resize;
   }
 
   &.line-n {
@@ -140,6 +141,7 @@
     left: 0;
     height: 5px;
     cursor: n-resize;
+    cursor: ns-resize;
   }
 
   &.line-w {
@@ -147,6 +149,7 @@
     left: -3px;
     width: 5px;
     cursor: w-resize;
+    cursor: ew-resize;
   }
 
   &.line-s {
@@ -154,6 +157,7 @@
     left: 0;
     height: 5px;
     cursor: s-resize;
+    cursor: ns-resize;
   }
 }
 
@@ -167,6 +171,7 @@
     right: -3px;
     margin-top: -3px;
     cursor: e-resize;
+    cursor: ew-resize;
   }
 
   &.point-n {
@@ -174,6 +179,7 @@
     left: 50%;
     margin-left: -3px;
     cursor: n-resize;
+    cursor: ns-resize;
   }
 
   &.point-w {
@@ -181,6 +187,7 @@
     left: -3px;
     margin-top: -3px;
     cursor: w-resize;
+    cursor: ew-resize;
   }
 
   &.point-s {
@@ -188,24 +195,28 @@
     left: 50%;
     margin-left: -3px;
     cursor: s-resize;
+    cursor: ns-resize;
   }
 
   &.point-ne {
     top: -3px;
     right: -3px;
     cursor: ne-resize;
+    cursor: nesw-resize;
   }
 
   &.point-nw {
     top: -3px;
     left: -3px;
     cursor: nw-resize;
+    cursor: nwse-resize;
   }
 
   &.point-sw {
     bottom: -3px;
     left: -3px;
     cursor: sw-resize;
+    cursor: nesw-resize;
   }
 
   &.point-se {
@@ -213,6 +224,7 @@
     bottom: -3px;
     .square(20px);
     cursor: se-resize;
+    cursor: nwse-resize;
     .opacity(1);
   }
 
