Moved from Less to Sass

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,15 +1,15 @@
 // Helper classes for JavaScript
-// ==================================================
+// =========================
 
 // Visual
 // -------------------------
 
 .cropper-bg {
-  background-image: data-uri("../img/bg.png");
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC");
 }
 
 .cropper-invisible {
-  .opacity(0);
+  @include opacity(0);
 }
 
 
