--- a/src/scss/cropper.scss
+++ b/src/scss/cropper.scss
@@ -8,7 +8,7 @@
  * Date: @DATE
  */
 
-@import "variables.less";
-@import "mixins.less";
-@import "main.less";
-@import "utilities.less";
+@import "variables.scss";
+@import "mixins.scss";
+@import "main.scss";
+@import "utilities.scss";
