--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,8 +1,10 @@
 // Cropper
-// ==================================================
+// =========================
 
 .cropper-container {
   position: relative;
+  font-size: 0;
+  line-height: 0;
   overflow: hidden;
   direction: ltr !important; // Ignore global rtl
   touch-action: none;
@@ -17,9 +19,11 @@
     // https://developer.mozilla.org/en-US/docs/Web/CSS/image-orientation
     image-orientation: 0deg !important;
 
-    .square(100%);
-    .min-square(e("0 !important"));
-    .max-square(e("none !important"));
+    min-width: 0 !important;
+    min-height: 0 !important;
+    max-width: none !important;
+    max-height: none !important;
+    @include square(100%);
   }
 }
 
@@ -36,42 +40,42 @@
 
 .cropper-drag-box {
   background-color: #fff;
-  .opacity(0);
+  @include opacity(0);
 }
 
 .cropper-modal {
   background-color: #000;
-  .opacity(.5);
+  @include opacity(.5);
 }
 
 .cropper-view-box {
   display: block;
-  .square(100%);
   overflow: hidden;
-  outline: 1px solid @color-brand;
-  outline-color: fade(@color-brand, 75%);
+  outline: 1px solid $color-brand;
+  outline-color: rgba($color-brand, .75);
+  @include square(100%);
 }
 
 .cropper-dashed {
   position: absolute;
   display: block;
   border: 0 dashed #eee;
-  .opacity(.5);
+  @include opacity(.5);
 
   &.dashed-h {
     top: percentage(1 / 3);
     left: 0;
-    .size(100%, percentage(1 / 3));
     border-top-width: 1px;
     border-bottom-width: 1px;
+    @include size(100%, percentage(1 / 3));
   }
 
   &.dashed-v {
     top: 0;
     left: percentage(1 / 3);
-    .size(percentage(1 / 3), 100%);
     border-right-width: 1px;
     border-left-width: 1px;
+    @include size(percentage(1 / 3), 100%);
   }
 }
 
@@ -82,7 +86,7 @@
   display: block;
   width: 0;
   height: 0;
-  .opacity(.75);
+  @include opacity(.75);
 
   &:before,
   &:after {
@@ -112,8 +116,8 @@
 .cropper-point {
   position: absolute;
   display: block;
-  .square(100%);
-  .opacity(.1);
+  @include square(100%);
+  @include opacity(.1);
 }
 
 .cropper-face {
@@ -123,7 +127,7 @@
 }
 
 .cropper-line {
-  background-color: @color-brand;
+  background-color: $color-brand;
 
   &.line-e {
     top: 0;
@@ -155,9 +159,9 @@
 }
 
 .cropper-point {
-  .square(5px);
-  background-color: @color-brand;
-  .opacity(.75);
+  background-color: $color-brand;
+  @include square(5px);
+  @include opacity(.75);
 
   &.point-e {
     top: 50%;
@@ -208,9 +212,9 @@
   &.point-se {
     right: -3px;
     bottom: -3px;
-    .square(20px);
     cursor: se-resize;
-    .opacity(1);
+    @include square(20px);
+    @include opacity(1);
   }
 
   &.point-se:before {
@@ -218,28 +222,28 @@
     right: -50%;
     bottom: -50%;
     display: block;
-    .square(200%);
     content: " ";
-    background-color: @color-brand;
-    .opacity(0);
+    background-color: $color-brand;
+    @include square(200%);
+    @include opacity(0);
   }
 
-  @media (min-width: @screen-sm) {
+  @media (min-width: $screen-sm) {
     &.point-se {
-      .square(15px);
+      @include square(15px);
     }
   }
 
-  @media (min-width: @screen-md) {
+  @media (min-width: $screen-md) {
     &.point-se {
-      .square(10px);
+      @include square(10px);
     }
   }
 
-  @media (min-width: @screen-lg) {
+  @media (min-width: $screen-lg) {
     &.point-se {
-      .square(5px);
-      .opacity(.75);
+      @include square(5px);
+      @include opacity(.75);
     }
   }
 }
