--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,7 +5,7 @@
   position: relative;
   font-size: 0;
   line-height: 0;
-  overflow: hidden;
+  overflow: visible;
   direction: ltr !important; // Ignore global rtl
   touch-action: none;
   user-select: none;
@@ -27,7 +27,18 @@
   }
 }
 
-.cropper-canvas,
+.cropper-canvas-wrapper {
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
+.cropper-canvas{	
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 .cropper-drag-box,
 .cropper-crop-box,
 .cropper-modal {
