--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -5,8 +5,8 @@
  * -------------------------------------------------------------------------- */
 
 .btn-primary {
-  border-color: #003973; /* hsb(210, 100%, 45%) */
-  background-color: #00468c; /* hsb(210, 100%, 55%) */
+  border-color: #0066bf;
+  background-color: #0074d9;
 }
 
 .btn-primary:hover,
@@ -15,8 +15,8 @@
 .btn-primary.active,
 .btn-primary.active:focus,
 .btn-primary.active:hover {
-  border-color: #00264d; /* hsb(208, 100%, 10%) */
-  background-color: #003366; /* hsb(208, 100%, 40%) */
+  border-color: #005299;
+  background-color: #005fb3;
 }
 
 
@@ -31,8 +31,8 @@ body {
 /* Header */
 
 .docs-header {
-  border-color: #003973;
-  background-color: #00468c;
+  border-color: #0066bf;
+  background-color: #0074d9;
   color: #fff;
 }
 
@@ -41,18 +41,18 @@ body {
 }
 
 .docs-header .navbar-toggle {
-  border-color: #003973;
-  background-color: #00468c;
+  border-color: transparent;
+  background-color: #0074d9;
 }
 
 .docs-header .navbar-toggle:hover,
 .docs-header .navbar-toggle:focus {
-  border-color: #003366;
-  background-color: #003973;
+  border-color: transparent;
+  background-color: #005fb3;
 }
 
 .docs-header .navbar-collapse {
-  border-color: #003973;
+  border-color: #0066bf;
 }
 
 .docs-header .navbar-text {
@@ -71,6 +71,7 @@ body {
   background-color: #f7f7f7;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 }
 
 .img-container {
@@ -98,7 +99,6 @@ body {
   float: left;
   margin-right: 10px;
   margin-bottom: 10px;
-  overflow: hidden;
 }
 
 .img-preview > img {
