--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -32,48 +32,30 @@ body {
 
 .docs-header {
   margin-bottom: 0;
-  border-color: #0066bf;
-  background-color: #0074d9;
-  color: #fff;
-}
-
-.docs-header .navbar-brand {
-  color: #eee;
-}
-
-.docs-header .navbar-toggle {
-  border-color: transparent;
-  background-color: #0074d9;
 }
 
 .docs-header .navbar-toggle:hover,
 .docs-header .navbar-toggle:focus {
-  border-color: transparent;
-  background-color: #005fb3;
+  border-color: #0074d9;
 }
 
-.docs-header .navbar-collapse {
-  border-color: #0066bf;
-}
-
-.docs-header .navbar-text {
-  color: #ddd;
-}
-
-.docs-header .navbar-nav > li > a {
-  color: #eee;
+.docs-header .navbar-toggle .icon-bar {
+  background-color: #0074d9;
 }
 
 
 /* Jumbotron */
 
 .docs-jumbotron {
-  background-color: #fcfcfc;
+  background-color: #0074d9;
+  color: #fff;
 }
 
 .docs-jumbotron .version {
   font-size: 14px;
-  color: #ccc;
+  color: #fff;
+  filter: alpha(opacity=50);
+  opacity: 0.5;
 }
 
 .docs-carbonads-container {
@@ -83,7 +65,7 @@ body {
 .docs-carbonads {
   max-width: 350px;
   padding: 15px;
-  border: 1px solid #0074d9;
+  border: 1px solid #ccc;
   border-radius: 4px;
   overflow: hidden;
 }
@@ -102,22 +84,20 @@ body {
 .carbon-poweredby {
   display: block;
   margin-left: 140px;
+}
+
+.carbon-text,
+.carbon-text:hover,
+.carbon-text:focus {
+  color: #fff;
   text-decoration: none;
 }
 
-.carbon-text:hover,
-.carbon-text:focus,
+.carbon-poweredby,
 .carbon-poweredby:hover,
 .carbon-poweredby:focus {
+  color: #ddd;
   text-decoration: none;
-}
-
-.carbon-text {
-  color: #0074d9;
-}
-
-.carbon-poweredby {
-  color: #999;
 }
 
 @media (min-width: 992px) {
@@ -295,31 +275,44 @@ body {
 /* Footer */
 
 .docs-footer {
-  margin-top: 100px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-top: 1px solid #0066bf;
-  background-color: #0074d9;
+  overflow: hidden;
+}
+
+.hearts {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: #ddd;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
 }
 
-.docs-footer a {
-  color: #eee;
+.hearts:hover {
+  color: #ff4136;
 }
 
-.docs-footer a:hover,
-.docs-footer a:focus {
-  color: #fff;
+.hearts:before {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  display: block;
+  height: 0;
+  border-top: 1px solid #eee;
+  content: " ";
 }
 
-.docs-footer a + a {
-  margin-left: 10px;
-}
-
-@media (min-width: 768px) {
-  .back-to-top {
-    float: right;
-  }
+.hearts:after {
+  position: relative;
+  z-index: 1;
+  padding-left: 8px;
+  padding-right: 8px;
+  background-color: #fff;
+  content: "♥";
 }
 
 
