--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,30 +1,16 @@
-/* Main
- * ========================================================================== */
-
-/* Button
- * -------------------------------------------------------------------------- */
-
-.btn-primary {
-  border-color: #0066bf;
-  background-color: #0074d9;
-}
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.active:focus,
-.btn-primary.active:hover {
-  border-color: #005299;
-  background-color: #005fb3;
-}
-
-
-/* Basic style
- * -------------------------------------------------------------------------- */
+/* Basic */
 
 body {
+  margin: 0;
   overflow-x: hidden;
+}
+
+.browserupgrade {
+  margin: 0;
+  padding: 5px 15px;
+  background-color: #ff851b;
+  color: #fff;
+  text-align: center;
 }
 
 
