--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@
 $color-brand: #39f !default;
 $color-black: #000 !default;
 $color-white: #fff !default;
+$color-bleed: #A22;
 
 
 // Media queries breakpoints
