--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,7 +5,7 @@
   position: relative;
   font-size: 0;
   line-height: 0;
-  direction: ltr !important; // Ignore global rtl
+  direction: ltr;
   user-select: none;
   touch-action: none;
 
