--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,25 +7,22 @@ body {
 
 .browserupgrade {
   margin: 0;
-  padding: .5em 1em;
+  padding: .5rem 1rem;
   background-color: #fcfcfc;
   text-align: center;
 }
 
+.btn {
+  padding-left: .75rem;
+  padding-right: .75rem;
+}
 
-/* Header */
-
-.docs-header {
+label.btn {
   margin-bottom: 0;
 }
 
-.navbar-toggle:hover,
-.navbar-toggle:focus {
-  border-color: #0074d9;
-}
-
-.navbar-toggle .icon-bar {
-  background-color: #0074d9;
+.d-flex > .btn {
+  flex-grow: 1;
 }
 
 
@@ -33,11 +30,12 @@ body {
 
 .docs-jumbotron {
   background-color: #0074d9;
+  border-radius: 0;
   color: #fff;
 }
 
 .docs-jumbotron .version {
-  font-size: 14px;
+  font-size: .875rem;
   color: #fff;
   filter: alpha(opacity=50);
   opacity: 0.5;
@@ -46,7 +44,7 @@ body {
 @media (min-width: 992px) {
   .docs-jumbotron h1,
   .docs-jumbotron p {
-    margin-right: 380px;
+    margin-right: 360px;
   }
 }
 
@@ -55,10 +53,11 @@ body {
 }
 
 .docs-carbonads {
-  max-width: 350px;
-  padding: 15px;
+  font-size: .875rem;
+  max-width: 330px;
+  padding: 1rem;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: .25rem;
   overflow: hidden;
 }
 
@@ -96,7 +95,7 @@ body {
   .docs-carbonads {
     position: absolute;
     right: 0;
-    bottom: 5px;
+    bottom: -1.25rem;
   }
 }
 
@@ -112,13 +111,13 @@ body {
 
 .img-container {
   min-height: 200px;
-  max-height: 516px;
-  margin-bottom: 20px;
+  max-height: 469px;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
   .img-container {
-    min-height: 516px;
+    min-height: 469px;
   }
 }
 
@@ -127,13 +126,13 @@ body {
 }
 
 .docs-preview {
-  margin-right: -15px;
+  margin-right: -1rem;
 }
 
 .img-preview {
   float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-right: .5rem;
+  margin-bottom: .5rem;
   overflow: hidden;
 }
 
@@ -142,59 +141,59 @@ body {
 }
 
 .preview-lg {
-  width: 263px;
-  height: 148px;
+  width: 16rem;
+  height: 9rem;
 }
 
 .preview-md {
-  width: 139px;
-  height: 78px;
+  width: 8rem;
+  height: 4.5rem;
 }
 
 .preview-sm {
-  width: 69px;
-  height: 39px;
+  width: 4rem;
+  height: 2.25rem;
 }
 
 .preview-xs {
-  width: 35px;
-  height: 20px;
+  width: 2rem;
+  height: 1.125rem;
   margin-right: 0;
 }
 
 .docs-data > .input-group {
-  margin-bottom: 10px;
+  margin-bottom: .5rem;
 }
 
 .docs-data > .input-group > label {
-  min-width: 80px;
+  min-width: 5rem;
 }
 
 .docs-data > .input-group > span {
-  min-width: 50px;
+  min-width: 3rem;
 }
 
 .docs-buttons > .btn,
 .docs-buttons > .btn-group,
 .docs-buttons > .form-control {
-  margin-right: 5px;
-  margin-bottom: 10px;
+  margin-right: .25rem;
+  margin-bottom: .5rem;
 }
 
 .docs-toggles > .btn,
 .docs-toggles > .btn-group,
 .docs-toggles > .dropdown {
-  margin-bottom: 10px;
+  margin-bottom: .5rem;
 }
 
 .docs-tooltip {
   display: block;
-  margin: -6px -12px;
-  padding: 6px 12px;
+  margin: -.5rem -.75rem;
+  padding: .5rem .75rem;
 }
 
 .docs-tooltip > .icon {
-  margin: 0 -3px;
+  margin: 0 -.25rem;
   vertical-align: top;
 }
 
@@ -208,29 +207,29 @@ body {
 }
 
 .btn-toggle {
-  padding: 6px;
+  padding: .5rem;
 }
 
 .btn-toggle > .docs-tooltip {
-  margin: -6px;
-  padding: 6px;
+  margin: -.5rem;
+  padding: .5rem;
 }
 
 @media (max-width: 400px) {
   .btn-group-crop {
-    margin-right: -15px!important;
+    margin-right: -1rem!important;
   }
 
   .btn-group-crop > .btn {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: .5rem;
+    padding-right: .5rem;
   }
 
   .btn-group-crop .docs-tooltip {
-    margin-left: -5px;
-    margin-right: -5px;
-    padding-left: 5px;
-    padding-right: 5px;
+    margin-left: -.5rem;
+    margin-right: -.5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
   }
 }
 
@@ -239,7 +238,9 @@ body {
 }
 
 .docs-options .dropdown-menu > li {
-  padding: 3px 20px;
+  font-size: .875rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .docs-options .dropdown-menu > li:hover {
@@ -259,32 +260,28 @@ body {
   max-width: 100%;
 }
 
-.docs-diagram .modal-dialog {
-  max-width: 352px;
-}
-
 
 /* Footer */
 
 .docs-footer {
+  font-size: .875rem;
   overflow: hidden;
 }
 
-.links {
-  text-align: center;
-  margin-bottom: 30px;
+.docs-footer .nav {
+  margin-bottom: 1rem;
 }
 
 .heart {
   position: relative;
   display: block;
   width: 100%;
-  height: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  height: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
   color: #ddd;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 1.125rem;
+  line-height: 2rem;
   text-align: center;
 }
 
@@ -306,8 +303,8 @@ body {
 .heart:after {
   position: relative;
   z-index: 1;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: .5rem;
+  padding-right: .5rem;
   background-color: #fff;
   content: "♥";
 }
