--- a/docs/css/cropper.css
+++ b/docs/css/cropper.css
@@ -1,13 +1,3 @@
-/*!
- * Cropper v3.0.0
- * https://github.com/fengyuanchen/cropper
- *
- * Copyright (c) 2017 Fengyuan Chen
- * Released under the MIT license
- *
- * Date: 2017-09-03T13:13:53.439Z
- */
-
 .cropper-container {
   direction: ltr;
   font-size: 0;
@@ -45,7 +35,8 @@
   top: 0;
 }
 
-.cropper-wrap-box {
+.cropper-wrap-box,
+.cropper-canvas {
   overflow: hidden;
 }
 
