--- a/docs/css/cropper.css
+++ b/docs/css/cropper.css
@@ -1,18 +1,28 @@
+/*!
+ * Cropper v3.1.0
+ * https://github.com/fengyuanchen/cropper
+ *
+ * Copyright (c) 2014-2017 Fengyuan Chen
+ * Released under the MIT license
+ *
+ * Date: 2017-10-08T08:56:31.177Z
+ */
+
 .cropper-container {
   direction: ltr;
   font-size: 0;
   line-height: 0;
   position: relative;
   -ms-touch-action: none;
-      touch-action: none;
+  touch-action: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.cropper-container img {
-  /* Avoid margin top issue (Occur only when margin-top <= -height) */
+.cropper-container img {/*Avoid margin top issue (Occur only when margin-top <= -height)
+ */
   display: block;
   height: 100%;
   image-orientation: 0deg;
@@ -63,7 +73,7 @@
   border: 0 dashed #eee;
   display: block;
   opacity: .5;
-  position: absolute
+  position: absolute;
 }
 
 .cropper-dashed.dashed-h {
@@ -91,11 +101,11 @@
   opacity: .75;
   position: absolute;
   top: 50%;
-  width: 0
+  width: 0;
 }
 
 .cropper-center:before,
-  .cropper-center:after {
+.cropper-center:after {
   background-color: #eee;
   content: ' ';
   display: block;
@@ -133,7 +143,7 @@
 }
 
 .cropper-line {
-  background-color: #39f
+  background-color: #39f;
 }
 
 .cropper-line.line-e {
@@ -168,7 +178,7 @@
   background-color: #39f;
   height: 5px;
   opacity: .75;
-  width: 5px
+  width: 5px;
 }
 
 .cropper-point.point-e {
@@ -227,27 +237,24 @@
 }
 
 @media (min-width: 768px) {
-
   .cropper-point.point-se {
     height: 15px;
-    width: 15px
+    width: 15px;
   }
 }
 
 @media (min-width: 992px) {
-
   .cropper-point.point-se {
     height: 10px;
-    width: 10px
+    width: 10px;
   }
 }
 
 @media (min-width: 1200px) {
-
   .cropper-point.point-se {
     height: 5px;
     opacity: .75;
-    width: 5px
+    width: 5px;
   }
 }
 
