--- a/docs/v3.1.6/css/cropper.css
+++ b/docs/v3.1.6/css/cropper.css
@@ -1,273 +1,288 @@
 /*!
- * Cropper v1.0.0
+ * Cropper v3.1.6
  * https://github.com/fengyuanchen/cropper
  *
- * Copyright (c) 2014-2015 Fengyuan Chen and contributors
+ * Copyright (c) 2014-2018 Chen Fengyuan
  * Released under the MIT license
  *
- * Date: 2015-10-10T02:10:06.999Z
+ * Date: 2018-03-01T13:33:39.581Z
  */
-.cropper-container {
-  position: relative;
-  overflow: hidden;
+
+ .cropper-container {
+  direction: ltr;
   font-size: 0;
   line-height: 0;
+  position: relative;
   -ms-touch-action: none;
-      touch-action: none;
+  touch-action: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-
-  direction: ltr !important;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-.cropper-container img {
+
+.cropper-container img {/*Avoid margin top issue (Occur only when margin-top <= -height)
+ */
   display: block;
-  width: 100%;
-  min-width: 0 !important;
-  max-width: none !important;
-  height: 100%; 
-  min-height: 0 !important;
+  height: 100%;
+  image-orientation: 0deg;
   max-height: none !important;
-
-  image-orientation: 0deg !important;
+  max-width: none !important;
+  min-height: 0 !important;
+  min-width: 0 !important;
+  width: 100%;
 }
 
+.cropper-wrap-box,
 .cropper-canvas,
 .cropper-drag-box,
 .cropper-crop-box,
 .cropper-modal {
-  position: absolute;
-  top: 0;
-  right: 0;
   bottom: 0;
   left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.cropper-wrap-box,
+.cropper-canvas {
+  overflow: hidden;
 }
 
 .cropper-drag-box {
   background-color: #fff;
-  filter: alpha(opacity=0); 
   opacity: 0;
 }
 
 .cropper-modal {
   background-color: #000;
-  filter: alpha(opacity=50); 
   opacity: .5;
 }
 
 .cropper-view-box {
   display: block;
-  width: 100%;
-  height: 100%; 
-  overflow: hidden;
+  height: 100%;
+  outline-color: rgba(51, 153, 255, 0.75);
   outline: 1px solid #39f;
-  outline-color: rgba(51, 153, 255, .75);
+  overflow: hidden;
+  width: 100%;
 }
 
 .cropper-dashed {
-  position: absolute;
-  display: block;
-  filter: alpha(opacity=50); 
   border: 0 dashed #eee;
+  display: block;
   opacity: .5;
+  position: absolute;
 }
+
 .cropper-dashed.dashed-h {
-  top: 33.33333%;
-  left: 0;
-  width: 100%;
-  height: 33.33333%; 
-  border-top-width: 1px;
   border-bottom-width: 1px;
+  border-top-width: 1px;
+  height: 33.33333%;
+  left: 0;
+  top: 33.33333%;
+  width: 100%;
 }
+
 .cropper-dashed.dashed-v {
-  top: 0;
-  left: 33.33333%;
-  width: 33.33333%;
-  height: 100%; 
-  border-right-width: 1px;
   border-left-width: 1px;
+  border-right-width: 1px;
+  height: 100%;
+  left: 33.33333%;
+  top: 0;
+  width: 33.33333%;
 }
 
 .cropper-center {
+  display: block;
+  height: 0;
+  left: 50%;
+  opacity: .75;
   position: absolute;
   top: 50%;
-  left: 50%;
-  display: block;
   width: 0;
-  height: 0;
-  filter: alpha(opacity=75); 
-  opacity: .75;
 }
+
 .cropper-center:before,
-  .cropper-center:after {
-  position: absolute;
-  display: block;
-  content: " "; 
-  background-color: #eee;
-}
-.cropper-center:before {
-  top: 0;
-  left: -3px;
-  width: 7px;
-  height: 1px;
-}
 .cropper-center:after {
-  top: -3px;
-  left: 0;
-  width: 1px;
+  background-color: #eee;
+  content: ' ';
+  display: block;
+  position: absolute;
+}
+
+.cropper-center:before {
+  height: 1px;
+  left: -3px;
+  top: 0;
+  width: 7px;
+}
+
+.cropper-center:after {
   height: 7px;
+  left: 0;
+  top: -3px;
+  width: 1px;
 }
 
 .cropper-face,
 .cropper-line,
 .cropper-point {
-  position: absolute;
   display: block;
-  width: 100%;
   height: 100%;
-  filter: alpha(opacity=10); 
   opacity: .1;
+  position: absolute;
+  width: 100%;
 }
 
 .cropper-face {
-  top: 0;
-  left: 0;
   background-color: #fff;
+  left: 0;
+  top: 0;
 }
 
 .cropper-line {
   background-color: #39f;
 }
+
 .cropper-line.line-e {
-  top: 0;
+  cursor: ew-resize;
   right: -3px;
-  width: 5px;
-  cursor: e-resize;
-}
-.cropper-line.line-n {
-  top: -3px;
-  left: 0;
-  height: 5px;
-  cursor: n-resize;
-}
-.cropper-line.line-w {
   top: 0;
-  left: -3px;
   width: 5px;
-  cursor: w-resize;
 }
+
+.cropper-line.line-n {
+  cursor: ns-resize;
+  height: 5px;
+  left: 0;
+  top: -3px;
+}
+
+.cropper-line.line-w {
+  cursor: ew-resize;
+  left: -3px;
+  top: 0;
+  width: 5px;
+}
+
 .cropper-line.line-s {
   bottom: -3px;
-  left: 0;
+  cursor: ns-resize;
   height: 5px;
-  cursor: s-resize;
+  left: 0;
 }
 
 .cropper-point {
-  width: 5px;
-  height: 5px;
   background-color: #39f;
-  filter: alpha(opacity=75); 
+  height: 5px;
   opacity: .75;
+  width: 5px;
 }
+
 .cropper-point.point-e {
-  top: 50%;
-  right: -3px;
+  cursor: ew-resize;
   margin-top: -3px;
-  cursor: e-resize;
+  right: -3px;
+  top: 50%;
 }
+
 .cropper-point.point-n {
-  top: -3px;
+  cursor: ns-resize;
   left: 50%;
   margin-left: -3px;
-  cursor: n-resize;
+  top: -3px;
 }
+
 .cropper-point.point-w {
-  top: 50%;
+  cursor: ew-resize;
   left: -3px;
   margin-top: -3px;
-  cursor: w-resize;
+  top: 50%;
 }
+
 .cropper-point.point-s {
   bottom: -3px;
+  cursor: s-resize;
   left: 50%;
   margin-left: -3px;
-  cursor: s-resize;
 }
+
 .cropper-point.point-ne {
-  top: -3px;
+  cursor: nesw-resize;
   right: -3px;
-  cursor: ne-resize;
-}
-.cropper-point.point-nw {
   top: -3px;
-  left: -3px;
-  cursor: nw-resize;
 }
+
+.cropper-point.point-nw {
+  cursor: nwse-resize;
+  left: -3px;
+  top: -3px;
+}
+
 .cropper-point.point-sw {
   bottom: -3px;
+  cursor: nesw-resize;
   left: -3px;
-  cursor: sw-resize;
 }
+
 .cropper-point.point-se {
-  right: -3px;
   bottom: -3px;
-  width: 20px;
+  cursor: nwse-resize;
   height: 20px;
-  cursor: se-resize;
-  filter: alpha(opacity=100); 
   opacity: 1;
+  right: -3px;
+  width: 20px;
 }
-.cropper-point.point-se:before {
-  position: absolute;
-  right: -50%;
-  bottom: -50%;
-  display: block;
-  width: 200%;
-  height: 200%;
-  content: " ";
-  background-color: #39f;
-  filter: alpha(opacity=0); 
-  opacity: 0;
-}
+
 @media (min-width: 768px) {
   .cropper-point.point-se {
-    width: 15px;
     height: 15px;
-  }
-}
-@media (min-width: 992px) {
-  .cropper-point.point-se {
-    width: 10px;
-    height: 10px;
-  }
-}
-@media (min-width: 1200px) {
-  .cropper-point.point-se {
-    width: 5px;
-    height: 5px;
-    filter: alpha(opacity=75); 
-    opacity: .75;
+    width: 15px;
   }
 }
 
-.cropper-bg {
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC");
+@media (min-width: 992px) {
+  .cropper-point.point-se {
+    height: 10px;
+    width: 10px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .cropper-point.point-se {
+    height: 5px;
+    opacity: .75;
+    width: 5px;
+  }
+}
+
+.cropper-point.point-se:before {
+  background-color: #39f;
+  bottom: -50%;
+  content: ' ';
+  display: block;
+  height: 200%;
+  opacity: 0;
+  position: absolute;
+  right: -50%;
+  width: 200%;
 }
 
 .cropper-invisible {
-  filter: alpha(opacity=0); 
   opacity: 0;
 }
 
+.cropper-bg {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC');
+}
+
 .cropper-hide {
-  position: absolute;
   display: block;
-  width: 0;
   height: 0;
+  position: absolute;
+  width: 0;
 }
 
 .cropper-hidden {
